[package]
name = "dbsdk-cli"
version = "0.1.2"
edition = "2021"
authors = [ "Hazel Stagner" ]
repository = "https://github.com/GlaireDaggers/DBSDK-Rust-CLI"
license = "MIT"
description = "Command-line utility to simplify building Rust games for the DreamBox fantasy console"
readme = "README.md"
keywords = ["gamedev", "fantasy-console"]
categories = ["wasm", "game-development", "command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.22", features = ["derive"] }
cargo_toml = "0.11.6"
fs_extra = "1.2.0"