[package]
name = "dbsdk-cli"
version = "0.1.3"
edition = "2021"
authors = [ "Hazel Stagner" ]
repository = "https://github.com/GlaireDaggers/DBSDK-Rust-CLI"
license = "MIT"
description = "Command-line utility to simplify building Rust games for the DreamBox fantasy console"
readme = "README.md"
keywords = ["gamedev", "fantasy-console"]
categories = ["wasm", "game-development", "command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
cargo_toml = "0.20.4"
fs_extra = "1.3.0"